Add search of goods

--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
 					
 				</div>
 			</section>
+
 			<section class="menu hide">
-				<div class="section-heading">
+				<div class="section-heading restaurant-description">
 					<h2 class="section-title restaurant-title">Пицца Плюс</h2>
 					<div class="card-info">
 						<div class="rating">
