Saving shopping cart to localStorage

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 					<section class="swiper-slide promo kebab">
 						<h1 class="promo-title">Шашлыки на майские <br> со скидкой 35%</h1>
 						<p class="promo-text">
-							Закажите шашлыки в любом ресторане до 10 мая и получите скидку по промокоду OMAGAD
+							Закажите шашлыки в любом ресторане до 10 мая и получите скидку по промокоду MEATFRY
 						</p>
 					</section>
 					<section class="swiper-slide promo vegetables">
 						<h1 class="promo-title">Скидка 20% на всю еду <br> по промокоду LOVE.JS</h1>
 						<p class="promo-text">
-							Блюдо из ресторана привезут вместе с двумя подарочными книгами по фронтенду
+							Блюдо из ресторана привезут вместе с двумя подарочными сертификатамы на следующий заказ
 						</p>
 					</section>
 					<section class="swiper-slide promo sushi">
